[package]
name = "pdal"
description = "PDAL bindings for Rust"
license = "MIT"
version = "0.1.0"
categories = ["science::geo", "api-bindings"]
edition = "2021"
repository = "https://github.com/georust/pdal"

[workspace]
members = ["pdal-sys"]

[dependencies]
pdal-sys = { path = "pdal-sys" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features=["default"] }
once_cell = "1.19.0"

[dev-dependencies]
once_cell = "1"
