[workspace]
members = ["pdal-sys"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/georust/pdal"
categories = ["science::geo", "api-bindings"]
keywords = ["pdal", "point-cloud", "geospatial", "gis", "lidar"]

[package]
name = "pdal"
description = "PDAL bindings for Rust"
publish = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pdal-sys = { path = "pdal-sys", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features=["default"] }

[dev-dependencies]
once_cell = "1"

[package.metadata.docs.rs]
all-features = true
# define attribute `docsrs` for feature badges
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.release]
enable-all-features = true
consolidate-commits = true
allow-branch = ["main"]
push = false
pre-release-commit-message = "Released version {{version}}"
